# excision-mail-cli

./: .gitignore  pyproject.toml  pytest.ini  sample-excision-mail.ini  setup.cfg
excision_mail/: UserManager.py  __init__.py  gpg.py  knot.py  utils.py  zone.py
man/: excision-mail.1
src/excision_mail/: UserManager.py  config.py  errors.py  gpg.py  user.py  utils.py  zone.py
