[metadata]
name = excision-mail
version = 0.0.1
author = Excision Mail
author_email = excision@bsd.ac
description = Tools to manage the Excision Mail system
url = https://excision.bsd.ac
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License
    Operating System :: OpenBSD

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
scripts =
    bin/excision-mail
install_requires =
    libknot
    obsd-crypt
    python-gnupg
    python-ldap

[options.extras_require]
test =
    pytest
    pytest-cov

[options.packages.find]
where = src
